--- a/AzureJavaToolInstaller.yml
+++ b/AzureJavaToolInstaller.yml
@@ -1,16 +1,59 @@
 # Java tool installer v0
 # Acquire a specific version of Java from a user-supplied Azure blob or the tool cache and sets JAVA_HOME.
+
+
+parameters:
+- name: 'versionSpec'
+  type: string    
+  default: '8'
+  
+- name: 'jdkArchitectureOption'
+  type: string    
+
+- name: 'jdkSourceOption'
+  type: string    
+
+- name: 'jdkFile'
+  type: string    
+
+- name: 'azureResourceManagerEndpoint'
+  type: string    
+
+- name: 'azureStorageAccountName'
+  type: string    
+
+- name: 'azureContainerName'
+  type: string    
+
+- name: 'azureCommonVirtualFile'
+  type: string    
+
+- name: 'jdkDestinationDirectory'
+  type: string   
+
+- name: 'azureResourceGroupName'
+  type: string    
+
+- name: 'cleanDestinationDirectory'
+  type: boolean  
+  default: true
+  
+- name: 'createExtractDirectory'
+  type: boolean    
+  default: true
+  
+steps:
 - task: JavaToolInstaller@0
   inputs:
-    versionSpec: '8' # string. Required. JDK version. Default: 8.
-    jdkArchitectureOption: # 'x64' | 'x86'. Required. JDK architecture. 
-    jdkSourceOption: # 'AzureStorage' | 'LocalDirectory' | 'PreInstalled'. Required. JDK source. 
-    #jdkFile: # string. Required when jdkSourceOption == LocalDirectory. JDK file. 
-    #azureResourceManagerEndpoint: # string. Required when jdkSourceOption == AzureStorage. Azure subscription. 
-    #azureStorageAccountName: # string. Required when jdkSourceOption == AzureStorage. Storage account name. 
-    #azureContainerName: # string. Required when jdkSourceOption == AzureStorage. Container name. 
-    #azureCommonVirtualFile: # string. Required when jdkSourceOption == AzureStorage. Common virtual path. 
-    #jdkDestinationDirectory: # string. Required when jdkSourceOption != PreInstalled. Destination directory. 
-    #azureResourceGroupName: # string. Optional. Use when jdkSourceOption == AzureStorage. Resource Group name. 
-    #cleanDestinationDirectory: true # boolean. Optional. Use when jdkSourceOption != PreInstalled. Clean destination directory. Default: true.
-    #createExtractDirectory: true # boolean. Optional. Use when jdkSourceOption != PreInstalled. Create directory for extracting. Default: true.
+    versionSpec: '${{parameters.versionSpec}}' 
+    jdkArchitectureOption: '${{parameters.jdkArchitectureOption}}' 
+    jdkSourceOption: '${{parameters.jdkSourceOption}}' 
+    jdkFile: '${{parameters.jdkFile}}' 
+    azureResourceManagerEndpoint: '${{parameters.azureResourceManagerEndpoint}}' 
+    azureStorageAccountName: '${{parameters.azureStorageAccountName}}' 
+    azureContainerName: '${{parameters.azureContainerName}}' 
+    azureCommonVirtualFile: '${{parameters.azureCommonVirtualFile}}' 
+    jdkDestinationDirectory: '${{parameters.jdkDestinationDirectory}}' 
+    azureResourceGroupName: '${{parameters.azureResourceGroupName}}' 
+    cleanDestinationDirectory: '${{parameters.cleanDestinationDirectory}}' 
+    createExtractDirectory: '${{parameters.createExtractDirectory}}' 
